# DeepSecurity

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  main.py
backend/core/: detector.py  recognizer.py  recorder.py
backend/db/: __init__.py  database.py  models.py
backend/routers/: faces.py  history.py  recognition.py  settings.py
backend/tests/: test_main.py
db/faces/: ds_model_vggface_detector_mtcnn_aligned_normalization_base_expand_0.pkl
frontend/: .env.example  Dockerfile
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/pages/: Identities.jsx  Logs.jsx  Recognition.jsx  Settings.jsx  SystemInfo.jsx
notebooks/: deepface_test.ipynb
src/: app.py
src/core/: classifier.py  detector.py  recognizer.py
src/deepsecurity/: __init__.py
