[project]
name = "deepsecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielPantoja08", email = "danny0897pant@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "deepface>=0.0.98",
    "matplotlib>=3.7.0",
    "numpy>=1.23.5,<2.0.0",
    "opencv-python>=4.8.0.74,<4.9.0.0",
    "pandas>=2.0.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "tensorflow==2.15.0",
    "tf-keras==2.15.0",
    "streamlit>=1.30.0",
    "tensorflow-intel==2.15.0",
    "mtcnn>=1.0.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
